crates/backyard-parser/tests/snapshots/declare__basic.snap
---
source: crates/backyard-parser/tests/declare.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: declare
    arguments:
      - node_type: declare_argument
        name:
          node_type: identifier
          name:
            - 115
            - 116
            - 114
            - 105
            - 99
            - 116
            - 95
            - 116
            - 121
            - 112
            - 101
            - 115
          loc:
            start:
              line: 1
              column: 8
              offset: 8
            end:
              line: 1
              column: 20
              offset: 20
          leadings: ~
          trailings: ~
        value:
          node_type: number
          value:
            - 49
          loc:
            start:
              line: 1
              column: 23
              offset: 23
            end:
              line: 1
              column: 23
              offset: 23
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 8
            offset: 8
          end:
            line: 1
            column: 23
            offset: 23
        leadings: ~
        trailings: ~
    body: ~
    body_type: Empty
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 24
        offset: 24
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 25
    offset: 25
leadings: ~
trailings: ~
